@@ -1,5 +1,6 @@
 - Option to allow land units to bombard aircraft and naval units in cities
 - Disallow useless bombard attacks vs airfields
+- Fix freeze related to trespassing restriction and AI disembarking
 
 * RELEASE 16 PREVIEW 2
 - Option to share visibility among all human players in a hotseat game
